--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -229,6 +229,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+          storeFile file('mineriumKey.keystore')
+          storePassword '159357'
+          keyAlias 'mineriumKey'
+          keyPassword '159357'
+        }
     }
     buildTypes {
         debug {
@@ -237,7 +243,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
