--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@rneui/base": "^4.0.0-rc.4",
     "@rneui/themed": "^4.0.0-rc.4",
     "axios": "^0.27.2",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.13.1",
+    "react-native-select-dropdown": "^2.0.3",
+    "react-native-svg": "12.2.0",
     "react-native-table-component": "^1.2.2",
+    "react-native-use-websocket": "^0.2.6",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
