--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@rneui/base": "^4.0.0-rc.4",
     "@rneui/themed": "^4.0.0-rc.4",
     "axios": "^0.27.2",
+    "lottie-ios": "3.2.3",
+    "lottie-react-native": "^5.1.3",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-native": "0.68.2",
