A lot of changes

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -92,12 +92,12 @@ apply from: "../../node_modules/react-native/react.gradle"
  * Upload all the APKs to the Play Store and people will download
  * the correct one based on the CPU architecture of their device.
  */
-def enableSeparateBuildPerCPUArchitecture = false
+def enableSeparateBuildPerCPUArchitecture = true
 
 /**
  * Run Proguard to shrink the Java bytecode in release builds.
  */
-def enableProguardInReleaseBuilds = false
+def enableProguardInReleaseBuilds = true
 
 /**
  * The preferred build flavor of JavaScriptCore.
@@ -135,7 +135,7 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.mineriumapplication"
+        applicationId "com.minerium.app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -218,7 +218,7 @@ android {
         abi {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
-            universalApk false  // If true, also generate a universal APK
+            universalApk true  // If true, also generate a universal APK
             include (*reactNativeArchitectures())
         }
     }
@@ -230,10 +230,12 @@ android {
             keyPassword 'android'
         }
         release {
-          storeFile file('mineriumKey.keystore')
-          storePassword '159357'
-          keyAlias 'mineriumKey'
-          keyPassword '159357'
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+              storeFile file('mineriumKey.keystore')
+              storePassword '159357'
+              keyAlias 'mineriumKey'
+              keyPassword '159357'
+            }
         }
     }
     buildTypes {
