--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mineriumApplication",
+  "name": "minerium_app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -22,6 +22,7 @@
     "lottie-react-native": "^5.1.3",
     "moment": "^2.29.3",
     "react": "17.0.2",
+    "react-countdown-hook": "^1.1.1",
     "react-native": "0.68.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-paper": "^4.12.1",
